--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.2.0",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.3"
   }
 }
