Fix issues & Implement Models

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "CyberSpeed is application development accelerator.",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "keywords": [
     "base",
@@ -23,7 +22,8 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
-    "passport-local": "^1.0.0",
+    "mongoose": "^5.2.1",
+    "mongoose-timestamp": "^0.6.0",
     "pug": "^2.0.3"
   }
 }
