--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
-    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
+    "hbs": "^4.0.1",
     "mongoose": "^5.2.1",
     "mongoose-timestamp": "^0.6.0"
   },
